--- a/.classpath
+++ b/.classpath
@@ -13,6 +13,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MySQLConnector"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/
+	"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
