Ignore target folder from Intellij.

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ hs_err_pid*
 # Edit at https://www.gitignore.io/?templates=intellij+all
 
 ### Intellij+all ###
+
+# Ignore target folder from Intellij.
+target/
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
