--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,9 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>Aplicação Gerenciadora de Leilão de Quadrinhos</display-name>
+  <context-param>
+    <param-name>incomingURLs</param-name>
+    <param-value>http://localhost:5500;https://leilaodequadrinhos.com.br;http://localhost:80</param-value>
+  </context-param>
 </web-app>
