--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ variables:
   azureSubscription: '5c8107e7-b4b4-43c6-ade8-a26b22926b32'
   
   # Web app name
-  webAppName: 'leilao-quadrinhos'
+  webAppName: 'webserver-leilao'
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
