--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,6 @@
   <display-name>Aplicação Gerenciadora de Leilão de Quadrinhos</display-name>
   <context-param>
     <param-name>incomingURLs</param-name>
-    <param-value>http://localhost:5500;https://leilaodequadrinhos.com.br;http://localhost:80;http://127.0.0.1:80;http://127.0.0.1:5500</param-value>
+    <param-value>http://localhost:5500;https://leilaodequadrinhos.com;http://localhost:80;http://127.0.0.1:80;http://127.0.0.1:5500</param-value>
   </context-param>
 </web-app>
